syntax = "proto3";

package kodus.ast;

import "kodus/common/chunk.proto";

service ASTAnalyzer {
  rpc BuildEnrichedGraph(BuildEnrichedGraphRequest) returns (stream kodus.common.ChunkResponse);
}

message BuildEnrichedGraphRequest {
    CloneRepositoryRequest baseRepo = 1;
    CloneRepositoryRequest headRepo = 2;
}

enum PlatformType {
    GITHUB = 0;
    GITLAB = 1;
    JIRA = 2;
    SLACK = 3;
    NOTION = 4;
    MSTEAMS = 5;
    DISCORD = 6;
    AZURE_BOARDS = 7;
    AZURE_REPOS = 8;
    KODUS_WEB = 9;
    BITBUCKET = 10;
}

enum AuthMode {
    OAUTH = 0;
    TOKEN = 1;
}

message Auth {
    optional AuthMode type = 1;
    optional string token = 2;
    optional string org = 3;
}

message CloneRepositoryRequest {
    string url = 1;
    PlatformType provider = 2;
    optional string branch = 3;
    optional Auth auth = 4;
    string organizationId = 5;
    string repositoryId = 6;
    string repositoryName = 7;
}

message DeleteRepositoryRequest {
    string organizationId = 1;
    string repositoryId = 2;
    string repositoryName = 3;
    string branchName = 4;
}
